--- a/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/KristofferStrube.Blazor.MediaStreamRecording.WasmExample.csproj
+++ b/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/KristofferStrube.Blazor.MediaStreamRecording.WasmExample.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="KristofferStrube.Blazor.WebAudio" Version="0.1.0-alpha.9" />
+    <PackageReference Include="Excubo.Blazor.Canvas" Version="3.2.50" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.7" PrivateAssets="all" />
   </ItemGroup>
