--- a/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/KristofferStrube.Blazor.MediaStreamRecording.WasmExample.csproj
+++ b/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/KristofferStrube.Blazor.MediaStreamRecording.WasmExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="KristofferStrube.Blazor.WebAudio" Version="0.1.0-alpha.9" />
+    <PackageReference Include="KristofferStrube.Blazor.WebAudio" Version="0.1.0-alpha.11" />
     <PackageReference Include="Excubo.Blazor.Canvas" Version="3.2.50" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.7" PrivateAssets="all" />
