--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,21 +12,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         # Checkout the code
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v4
 
         # Install .NET 8.0 SDK
         - name: Setup .NET 8 preview
-          uses: actions/setup-dotnet@v1
+          uses: actions/setup-dotnet@v3
           with:
             dotnet-version: '8.0.x'
             include-prerelease: true
-            
-        # Added Ahead-Of-Time workload
-        - name: Add AOT Workload
-          run: |
-            dotnet workload install wasm-tools-net7
-            dotnet workload restore
 
+        # Build 
+        - name: Build
+          run: dotnet build
+
+        # Install PlayWright
+        - name: Install PlayWright
+          run: pwsh tests/IntegrationTests/bin/Debug/net8.0/playwright.ps1 install --with-deps
+
+        # Run tests 
+        - name: Test
+          run: dotnet test
+          
         # Generate the website
         - name: Publish
           run: dotnet publish samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/KristofferStrube.Blazor.MediaStreamRecording.WasmExample.csproj --configuration Release --output build
