--- a/src/KristofferStrube.Blazor.MediaStreamRecording/KristofferStrube.Blazor.MediaStreamRecording.csproj
+++ b/src/KristofferStrube.Blazor.MediaStreamRecording/KristofferStrube.Blazor.MediaStreamRecording.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <Title>MediaStream Recording API wrapper</Title>
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/KristofferStrube/Blazor.MediaStreamRecording</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageVersion>0.1.0-alpha.1</PackageVersion>
+    <PackageVersion>0.1.0-alpha.2</PackageVersion>
     <Authors>Kristoffer Strube</Authors>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageIcon>icon.png</PackageIcon>
@@ -34,10 +34,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="KristofferStrube.Blazor.FileAPI" Version="0.3.0" />
-    <PackageReference Include="KristofferStrube.Blazor.MediaCaptureStreams" Version="0.3.0" />
+    <PackageReference Include="KristofferStrube.Blazor.FileAPI" Version="0.4.0" />
+    <PackageReference Include="KristofferStrube.Blazor.MediaCaptureStreams" Version="0.4.0" />
     <PackageReference Include="KristofferStrube.Blazor.Window" Version="0.1.0-alpha.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.15" />
   </ItemGroup>
 
 </Project>
